--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,7 +27,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,8 +79,8 @@
                             android:id="@+id/search_btn"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:src="@drawable/baseline_search_24"
-                            android:background="@drawable/none"/>
+                            android:background="@drawable/none"
+                            android:src="@drawable/baseline_search_24" />
 
                     </LinearLayout>
 
@@ -199,11 +206,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="7dp"
                 android:layout_margin="7dp"
+                android:padding="7dp"
                 android:text="Latest Offers"
                 android:textSize="25dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <ViewFlipper
                 android:layout_width="match_parent"
@@ -219,6 +226,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/banner4" />
+
+                <FrameLayout
+                    android:id="@+id/frame_Layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    >
+
+                </FrameLayout>
 
                 <ImageView
                     android:id="@+id/imageView4"
@@ -239,72 +258,74 @@
                     app:srcCompat="@drawable/banner2" />
             </ViewFlipper>
 
-<!--            <ScrollView-->
-<!--                android:layout_width="380dp"-->
-<!--                android:layout_height="160dp"-->
-<!--                tools:layout_editor_absoluteX="16dp"-->
-<!--                tools:layout_editor_absoluteY="348dp">-->
+            <!--            <ScrollView-->
+            <!--                android:layout_width="380dp"-->
+            <!--                android:layout_height="160dp"-->
+            <!--                tools:layout_editor_absoluteX="16dp"-->
+            <!--                tools:layout_editor_absoluteY="348dp">-->
 
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:orientation="horizontal">-->
+            <!--                <LinearLayout-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:orientation="horizontal">-->
 
-<!--                    <ImageView-->
-<!--                        android:id="@+id/imageView4"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="1"-->
-<!--                        app:srcCompat="@drawable/banner1" />-->
+            <!--                    <ImageView-->
+            <!--                        android:id="@+id/imageView4"-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:layout_weight="1"-->
+            <!--                        app:srcCompat="@drawable/banner1" />-->
 
-<!--                    <ImageView-->
-<!--                        android:id="@+id/imageView5"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="1"-->
-<!--                        app:srcCompat="@drawable/banner2" />-->
+            <!--                    <ImageView-->
+            <!--                        android:id="@+id/imageView5"-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:layout_weight="1"-->
+            <!--                        app:srcCompat="@drawable/banner2" />-->
 
-<!--                    <ImageView-->
-<!--                        android:id="@+id/imageView6"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="1"-->
-<!--                        app:srcCompat="@drawable/banner3" />-->
-<!--                </LinearLayout>-->
-<!--            </ScrollView>-->
-\
+            <!--                    <ImageView-->
+            <!--                        android:id="@+id/imageView6"-->
+            <!--                        android:layout_width="wrap_content"-->
+            <!--                        android:layout_height="wrap_content"-->
+            <!--                        android:layout_weight="1"-->
+            <!--                        app:srcCompat="@drawable/banner3" />-->
+            <!--                </LinearLayout>-->
+            <!--            </ScrollView>-->
+            \
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:background="@drawable/border"
-                    android:padding="10dp"
                     android:layout_width="130dp"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
-                    android:text="   FREE DELIVERY ON FIRST ORDER"
-                    android:textSize="10dp"
+                    android:background="@drawable/border"
                     android:drawableLeft="@drawable/baseline_delivery_dining_24"
-                    android:textStyle="bold" />
-                <TextView
                     android:padding="10dp"
-                    android:background="@drawable/border"
-                    android:layout_width="130dp"
-                    android:layout_margin="5dp"
-                    android:layout_height="match_parent"
-                    android:text="PAY ON      DELIVERY"
-                    android:drawableLeft="@drawable/baseline_payment_24"
+                    android:text="   FREE DELIVERY ON FIRST ORDER"
                     android:textSize="10dp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:padding="10dp"
-                    android:drawableLeft="@drawable/baseline_keyboard_return_24"
+                    android:layout_width="130dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
                     android:background="@drawable/border"
+                    android:drawableLeft="@drawable/baseline_payment_24"
+                    android:padding="10dp"
+                    android:text="PAY ON      DELIVERY"
+                    android:textSize="10dp"
+                    android:textStyle="bold" />
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
+                    android:background="@drawable/border"
+                    android:drawableLeft="@drawable/baseline_keyboard_return_24"
+                    android:padding="10dp"
                     android:text="EASY RETURNS"
                     android:textSize="10dp"
                     android:textStyle="bold" />
@@ -328,8 +349,8 @@
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:layout_margin="4dp"
+                    android:gravity="center"
                     android:padding="3dp">
 
 
@@ -351,8 +372,8 @@
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:layout_margin="4dp"
+                    android:gravity="center"
                     android:padding="3dp">
 
 
@@ -374,8 +395,8 @@
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:layout_margin="4dp"
+                    android:gravity="center"
                     android:padding="3dp">
 
 
@@ -392,10 +413,11 @@
                         android:layout_height="80dp"
                         android:layout_margin="7dp"
                         android:background="@drawable/home___kitchen" />
+
                 </TableRow>
 
                 <ImageButton
-                    android:id="@+id/cat7"
+                    android:id="@+id/c7"
 
                     android:layout_width="380dp"
                     android:layout_height="80dp"
@@ -413,13 +435,13 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TRENDING THIS WEEK"
-                    android:textSize="30dp"
-                    android:gravity="center"
-                    android:fontFamily="@font/aclonica"
-                    android:padding="7dp"
                     android:layout_margin="25dp"
-                    android:textColor="#FF5722"/>
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="center"
+                    android:padding="7dp"
+                    android:text="TRENDING THIS WEEK"
+                    android:textColor="#FF5722"
+                    android:textSize="30dp" />
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
@@ -434,27 +456,32 @@
                             android:id="@+id/d1"
                             android:layout_width="140dp"
                             android:layout_height="140dp"
-                            android:layout_margin="10dp"/>
+                            android:layout_margin="10dp" />
+
                         <ImageButton
                             android:id="@+id/d2"
                             android:layout_width="140dp"
                             android:layout_height="140dp"
-                            android:layout_margin="10dp"/>
+                            android:layout_margin="10dp" />
+
                         <ImageButton
                             android:id="@+id/d3"
                             android:layout_width="140dp"
                             android:layout_height="140dp"
-                            android:layout_margin="10dp"/>
+                            android:layout_margin="10dp" />
+
                         <ImageButton
                             android:id="@+id/d4"
                             android:layout_width="140dp"
                             android:layout_height="140dp"
-                            android:layout_margin="10dp"/>
+                            android:layout_margin="10dp" />
+
                         <ImageButton
                             android:id="@+id/d5"
                             android:layout_width="140dp"
                             android:layout_height="140dp"
-                            android:layout_margin="10dp"/>
+                            android:layout_margin="10dp" />
+
 
                     </LinearLayout>
                 </HorizontalScrollView>
@@ -465,6 +492,15 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu"/>
 
     <!--            <ImageView-->
         <!--                android:id="@+id/imageView"-->
